argocd_stuffs/sample-manifests/v2/k8s/1.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: prod-quickops
