argocd_stuffs/sample-manifests/v2/k8s/3.backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops  
  name: quickopsbe
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: quickopsbe
  template:
    metadata:
      labels:
        app: quickopsbe
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: quickopsbe
        image: registry.cloudaes.com/quickops-be/quickopsprod-saas-be:prod-v1.0.0
        ports:
          - containerPort: 8083
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
          limits:
            memory: "3Gi"
            cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops  
  name: quickopsbe-service
spec:
  selector:
    app: quickopsbe
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
