argocd_stuffs/sample-manifests/v2/k8s/4.frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops
  name: quickopsfe
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: quickopsfe
  template:
    metadata:
      labels:
        app: quickopsfe
    spec:
      imagePullSecrets:
       - name: harbor-pull-secret
      containers:
      - name: quickopsfe
        image: registry.cloudaes.com/quickops-fe/quickopsprod-sas:16Jul-09-45-d46a998
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops  
  name: quickopsfe-service
spec:
  selector:
    app: quickopsfe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
