argocd_stuffs/sample-manifests/v2/k8s/5.comsys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops 
  name: quickopsmail
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: quickopsmail
  template:
    metadata:
      labels:
        app: quickopsmail
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: quickopsmail
        image: registry.cloudaes.com/quickops-mail/aes-comm-sys-be:18May-15-06-6bcbe5a
        ports:
          - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  namespace: prod-quickops
  name: quickopsmail-service
spec:
  selector:
    app: quickopsmail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: ClusterIP
