argocd_stuffs/sample-manifests/v2/k8s/9.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-quickops-ingress
  namespace: prod-quickops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: portal.quickops.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: quickopsfe-service
                port:
                  number: 80
            path: /?(.*)
    - host: portalbe.quickops.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: quickopsbe-service
                port:
                  number: 8083
            path: /?(.*)
    - host: portalgo.quickops.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: quickopsgo-service
                port:
                  number: 8084
            path: /?(.*)
    
    - host: argo-quickops-sas.cloudaes.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: argocd-server-bridge
                port:
                  number: 443
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - portal.quickops.io
      - portalbe.quickops.io
      - portalgo.quickops.io
      - argo-quickops-sas.cloudaes.com
      secretName: quickops-tls
